force-app/main/default/objects/FEC_Routing_Action_History__c/FEC_Routing_Action_History__c.object-meta.xml
<CustomObject>
    <label>Routing Action History</label>
    <nameField>
        <displayFormat>RAH - {0}</displayFormat>
        <label>Routing Action History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Action History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>