force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Assigned_On__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assigned_On__c</fullName>
    <description>Thời điểm Case/Assignment được chuyển tới Queue/User</description>
    <label>Assigned On</label>
    <type>DateTime</type>
</CustomField>