force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>FEC_Assignment__c</referenceTo>
    <relationshipLabel>Routing Action Histories</relationshipLabel>
    <relationshipName>Routing_Action_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>