force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Changed_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Changed_Status__c</fullName>
    <description>Trạng thái của Case sau khi thay đổi</description>
    <label>Changed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>