force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Status__c</fullName>
    <description>Trạng thái Case trước khi chuyển đổi</description>
    <label>Current Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>