force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Custom_Action_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>FEC_Custom_Action_Button_Label__c</fullName>
    <label>Custom Action Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>