force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Decision__c.field-meta.xml
<CustomField>
    <fullName>FEC_Decision__c</fullName>
    <description>Tên Decision đã lựa chọn khi user chọn Routing Action là Revert/ Transfer/ Update</description>
    <label>Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>