force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Description__c.field-meta.xml
<CustomField>
    <fullName>FEC_Description__c</fullName>
    <description>Trường lưu các thông tin ghi chú</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>