force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Is_CO_Queue_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_CO_Queue_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True khi Original hoặc Updated User/Queue thuộc team CO (FEC_Team_Queue__c.FEC_Select_Team__r.Name = CO).</description>
    <label>Is CO Queue User</label>
    <type>Checkbox</type>
</CustomField>