force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Is_DS_Queue_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_DS_Queue_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True khi Original hoặc Updated User/Queue thuộc team Direct Sales (DS).</description>
    <label>Is DS Queue User</label>
    <type>Checkbox</type>
</CustomField>