force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_IsReverted__c.field-meta.xml
<CustomField>
    <fullName>FEC_IsReverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReverted</label>
    <type>Checkbox</type>
</CustomField>