force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Next_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stage sau khi thay đổi</description>
    <label>Next Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>Routing Action History (Case Stage)</relationshipLabel>
    <relationshipName>Routing_Action_History1_del</relationshipName>
    <type>Lookup</type>
</CustomField>