force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Original_User_Queue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_User_Queue__c</fullName>
    <description>User/ Queue là owner của Case tại thời điểm chọn action để thực hiện</description>
    <label>Original User/ Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>