force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Original_User_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_User_Queue_ID__c</fullName>
    <description>Trường lưu thông tin ID của User trước khi thực hiện Routing Action</description>
    <label>Original User/ Queue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>