force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Perform_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_Perform_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User thực hiện Routing Action</description>
    <label>Perform User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Routing_Action_History_del</relationshipName>
    <type>Lookup</type>
</CustomField>