force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Previous_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stage trước khi thay đổi</description>
    <label>Previous Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>Routing Action History</relationshipLabel>
    <relationshipName>Routing_Action_History_del</relationshipName>
    <type>Lookup</type>
</CustomField>