force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Routing_Action__c.field-meta.xml
<CustomField>
    <fullName>FEC_Routing_Action__c</fullName>
    <description>Tên Routing Action đã thực hiện</description>
    <label>Routing Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>