force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Routing_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Routing_Action_Type__c</fullName>
    <description>Trường phân biệt bản ghi Routing Action History level Case và Assignment</description>
    <label>Routing Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
                <default>true</default>
                <label>Case</label>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>