force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Stage_Name__c</fullName>
    <label>Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>