force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>FEC_Submitted_On__c</fullName>
    <description>Thời điểm User submit Case</description>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>