force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_TAT_by_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FEC_TAT_by_Assignment__c</fullName>
    <label>TAT by Assignment (Hrs)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>