force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_TAT_by_Assignment_Hrs__c.field-meta.xml
<CustomField>
    <fullName>FEC_TAT_by_Assignment_Hrs__c</fullName>
    <description>Tổng số giờ làm việc (decimal) giữa Assigned On và Submitted On, theo Business Hours.</description>
    <label>TAT by Assignment (Hrs)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>