force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Updated_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_Updated_Group__c</fullName>
    <description>Mã team (CA, CP, DS, …) của User/Queue nhận routing — dùng filter báo cáo TAT theo text thay vì checkbox từng team.</description>
    <label>Updated Group</label>
    <length>32</length>
    <type>Text</type>
</CustomField>