force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Updated_User_Queue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Updated_User_Queue__c</fullName>
    <description>User/ Queue là owner của Case tại sau khi thực hiện action thành công</description>
    <label>Updated User/ Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>