force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_Updated_User_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Updated_User_Queue_ID__c</fullName>
    <description>ID của Updated User/ Queue ID sử dụng phục vụ việc code đối chiếu User/Queue nhận Routing với User tương tác trên Case</description>
    <label>Updated User/ Queue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>