force-app/main/default/objects/FEC_Routing_Action_History__c/fields/FEC_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_User__c</fullName>
    <description>Email ID của User thực hiện action</description>
    <label>User</label>
    <type>Email</type>
</CustomField>